# scutil-parser

./: Cargo.toml  testdata.txt
src/: dns.rs  lib.rs  main.rs  test.rs
